# playgrounds

./: .gitignore  README.md
go_playground/: README.md  go.mod  go.sum  go_playground  main.go
ml/analysis/: people_born_normal.csv  people_data_06.csv  people_data_07.csv  people_married.csv  peoples.ipynb  result.csv
ml/auto_ml/flaml/: demo.ipynb  (+1 more)
ml/datasets/: amazon.csv.train  amazon.csv.valid
ml/reinforcement-learning/: maze_pg.ipynb  maze_q_learning.ipynb  maze_sarsa.ipynb
ml/simple-demo/: lightgbm.ipynb  pytorch_gan.py  simple_nn.ipynb
py_playground/: README.md  app.py  docker-compose.yml  main.py  red_package.py  solution.py
py_playground/backtrace/: nqueen.ipynb
py_playground/benchmark/: sort.py
py_playground/datasets/: A0301a.csv  amazon.csv.train  amazon.csv.valid
py_playground/datastructure/: heap.ipynb  teap.ipynb  treap.ipynb
py_playground/docker/: docker-compose.yml  token
py_playground/dp/: knapsack.ipynb
rust_playground/: Cargo.toml  README.md
rust_playground/src/: backtrack.rs  main.rs  solution.rs
rust_playground/src/backtrace/: mod.rs  nqueen.rs  permute.rs
rust_playground/src/benchmark/: run.rs  sort.rs
rust_playground/src/dp/: knapsack.rs  mod.rs  rob.rs  stockproblem.rs
rust_playground/src/leetcode/: mod.rs  no_679.rs  no_84.rs
rust_playground/src/linkedlist/: fifth.rs  first.rs  fourth.rs  second.rs  third.rs
rust_playground/src/middleware/: kafka.rs  mod.rs  redis.rs
rust_playground/src/sicp/: cons.rs  gcd.rs  mod.rs  prime.rs
rust_playground/src/unionfind/: mod.rs  mst_1707.rs  union_find.rs
rust_playground/src/utils/: mod.rs  urand.rs  utime.rs
(+86 files in other folders)
