[package]
name = "rust_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# futures = "0.3.5"
# futures-timer = "3.0.2"
rand = "0.8.3"
log = "0.4.14"
time = "0.2.25"
# itertools = "0.10.0"
# tokio = "0.2.22"
# tokio-io = "0.1.13"
# lazy_static = "1.4.0"
# serde = "~1"
# serde_json = "~1"